B&L QA/objects/Order_Header__c.object
<CustomObject>
    <description>NORDCSS: Stores the Order Header information for orders. Used for creation of new orders, and also as a holding place for back orders in order that track and trace can take place speedily inside salesforce.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the Ship To Account on an order</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account_Name__c</fullName>
        <label>Bill To Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_1__c</fullName>
        <label>Bill To Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_2__c</fullName>
        <label>Bill To Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_ID__c</fullName>
        <label>Bill To ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Postcode__c</fullName>
        <label>Bill To Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NORSE</fullName>
                </value>
                <value>
                    <fullName>NORNO</fullName>
                </value>
                <value>
                    <fullName>NORDK</fullName>
                </value>
                <value>
                    <fullName>NORFI</fullName>
                </value>
                <value>
                    <fullName>UNKGD</fullName>
                </value>
                <value>
                    <fullName>NETPR</fullName>
                </value>
                <value>
                    <fullName>FRANC</fullName>
                </value>
                <value>
                    <fullName>BELGM</fullName>
                </value>
                <value>
                    <fullName>ITACM</fullName>
                </value>
                <value>
                    <fullName>SPACM</fullName>
                </value>
                <value>
                    <fullName>SPACI</fullName>
                </value>
                <value>
                    <fullName>PORTU</fullName>
                </value>
                <value>
                    <fullName>DMBLV</fullName>
                </value>
                <value>
                    <fullName>SWICM</fullName>
                </value>
                <value>
                    <fullName>AUSTR</fullName>
                </value>
                <value>
                    <fullName>BLUSA</fullName>
                </value>
                <value>
                    <fullName>CANAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Name__c</fullName>
        <description>This is the name of the person calling in with the order.
Mandatory if the order comes by phone.</description>
        <label>Caller Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Back_Order__c</fullName>
        <label>Cancel Back Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Carrier table. The Carrier should default to the Carrier on the account.</description>
        <label>Carrier</label>
        <referenceTo>Carrier__c</referenceTo>
        <relationshipLabel>Orders with this Carrier</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Freight__c</fullName>
        <label>Charge Freight?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_PO_No__c</fullName>
        <description>Custoemr PO No. if the order relates to just one PO number, all the line items should be updated to reflect this value. Otherwise the PO number should be entered at each line item by the CSR for the different Customer PO numbers included in the one order.</description>
        <label>Customer PO No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Name__c</fullName>
        <label>Delivery Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Defaulted from the account, but should be possible to edit</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Freight_Amount__c</fullName>
        <description>This field should be populated with the freight charge from the Freight Terms table.
The CSR should also have the right to override.</description>
        <label>Freight Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Delivery__c</fullName>
        <description>Indicates whether an address override is for a home delivery or not.</description>
        <label>Home Delivery?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MSR_No__c</fullName>
        <description>MSR Order No</description>
        <label>MSR No.</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Order_Lines__c</fullName>
        <description>Rolls up the no. of Order Lines contained in the order</description>
        <label>No. of Order Lines</label>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Entered_By__c</fullName>
        <description>Contains the name of the user who entered the order. Populated by integration from peoplesoft.</description>
        <label>Order Entered By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Group__c</fullName>
        <label>Order Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STD</fullName>
                    <default>true</default>
                    <label>STD</label>
                </value>
                <value>
                    <fullName>CAMP</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
                <value>
                    <fullName>FOCRPL</fullName>
                </value>
                <value>
                    <fullName>LEVAVT</fullName>
                </value>
                <value>
                    <fullName>PROMO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Source__c</fullName>
        <description>This is the origin of the order.</description>
        <label>Order Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PHONE</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>WEB</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>FAX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partial_Order__c</fullName>
        <label>Partial Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partials__c</fullName>
        <label>Partials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Ref_No__c</fullName>
        <description>If the patient reference no. is added at the order header this should be reflected across all line items. Otherwise, the patient reference number should be entered by the CSR at order line level to reflect which patient each order line relates to.</description>
        <label>Patient Ref. No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Order_Number__c</fullName>
        <description>To contain the Web &quot;W&quot; or &quot;S&quot; reference number.</description>
        <label>Ref Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <externalId>true</externalId>
        <label>SETID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Order_Number__c</fullName>
        <displayFormat>SF-{YY}{00000}</displayFormat>
        <label>SF Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SF_Order_Status__c</fullName>
        <description>Used to manage the integration of orders
Values to be determined.</description>
        <label>SF Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                    <default>true</default>
                    <label>Saved</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Ship_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Scheduled Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_1__c</fullName>
        <description>Should default with values from the Ship To Account (ie. the master of the order). The CSR should be able to override this address. if the address is overriden the Shipping Flags should be automatically overridden.</description>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_ID__c</fullName>
        <label>Ship To ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Postcode__c</fullName>
        <label>Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <label>Ship Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GROUND</fullName>
                    <default>true</default>
                    <label>GROUND</label>
                </value>
                <value>
                    <fullName>NON-CONS</fullName>
                </value>
                <value>
                    <fullName>HOME_DEL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>CASE( Order_Status__c , &apos;O&apos;, &apos;Open&apos;, &apos;C&apos;, &apos;Closed&apos;, &apos;P&apos;, &apos;Pending&apos;, &apos;X&apos;, &apos;Canceled&apos;, &apos;H&apos;, &apos;Hold&apos;, &apos;Open&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <description>Defaulted from the Account, but should be possible to edit.</description>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <description>To store the sum of the Order Value and the Freight</description>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>NAME</columns>
        <columns>SETID__c</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Total_Value__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>SF_Order_Status__c</columns>
        <columns>No_of_Order_Lines__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders_Errors</fullName>
        <columns>NAME</columns>
        <columns>SETID__c</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Total_Value__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>SF_Order_Status__c</columns>
        <columns>No_of_Order_Lines__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Ship_To_Address_1__c</columns>
        <columns>Ship_To_Address_2__c</columns>
        <columns>Caller_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Ship_To_ID__c</field>
            <operation>equals</operation>
            <value>0018000000</value>
        </filters>
        <label>All Orders - Errors</label>
    </listViews>
    <listViews>
        <fullName>My_Orders</fullName>
        <columns>NAME</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Account__c</columns>
        <columns>Caller_Name__c</columns>
        <columns>Customer_PO_No__c</columns>
        <columns>Order_Status__c</columns>
        <columns>Home_Delivery__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Order_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Orders</label>
    </listViews>
    <listViews>
        <fullName>Orders_Created_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Account__c</columns>
        <columns>Order_Source__c</columns>
        <columns>Customer_PO_No__c</columns>
        <columns>Order_Status__c</columns>
        <columns>SF_Order_Status__c</columns>
        <columns>No_of_Order_Lines__c</columns>
        <columns>Home_Delivery__c</columns>
        <columns>Legacy_System_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Orders Created This Week</label>
    </listViews>
    <listViews>
        <fullName>Orders_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Account__c</columns>
        <columns>Order_Source__c</columns>
        <columns>Customer_PO_No__c</columns>
        <columns>Order_Status__c</columns>
        <columns>SF_Order_Status__c</columns>
        <columns>No_of_Order_Lines__c</columns>
        <columns>Home_Delivery__c</columns>
        <columns>Legacy_System_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Orders Created Today</label>
    </listViews>
    <nameField>
        <label>Order Ref.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>